made TacoOrder serializable added error validation labels for design template

--- a/src/main/resources/templates/design.xhtml
+++ b/src/main/resources/templates/design.xhtml
@@ -57,12 +57,17 @@
       </div>
       </div>
       </div>
- 
+        <span class="validationError"
+            th:if="${#fields.hasErrors('ingredients')}"
+            th:errors="*{ingredients}">delivery name error</span>
       <div>
  
  
       <h3>Name your taco creation:</h3>
       <input type="text" th:field="*{name}"/>
+      <span class="validationError"
+            th:if="${#fields.hasErrors('name')}"
+            th:errors="*{name}">delivery name error</span>
       <br/>
        <button>Submit Your Taco</button>
       </div>
