--- a/src/main/resources/templates/orderForm.xhtml
+++ b/src/main/resources/templates/orderForm.xhtml
@@ -8,7 +8,7 @@
  
   <body>
  
-    <form method="POST" th:action="@{/orders}" th:object="${order}">
+    <form method="POST" th:action="@{/orders}" th:object="${tacoOrder}">
       <h1>Order your taco creations!</h1>
  
       <img th:src="@{/images/cat.png}"/>
@@ -16,7 +16,7 @@
       <h3>Your tacos in this order:</h3>
       <a th:href="@{/design}" id="another">Design another taco</a><br/>
       <ul>
-        <li th:each="taco : ${order.tacos}">
+        <li th:each="taco : ${tacoOrder.tacos}">
           <span th:text="${taco.name}">taco name</span></li>
       </ul>
  
